# riley-dashboard

./: .gitignore  pnpm-lock.yaml
artifacts/api-server/: .tsbuildinfo
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: bugscan.ts  recon-agent.ts  riley-agent.ts
artifacts/api-server/src/routes/: alerts.ts  bugscan.ts  dashboard.ts  index.ts  investigate.ts  osint.ts  patterns.ts  recon.ts  riley-chat.ts  threat-map.ts  tier1-agent.ts  waitlist.ts
artifacts/api-server/src/scripts/: seed-mitre.ts
artifacts/riley-dashboard/: .tsbuildinfo  index.html  package.json  vercel.json
artifacts/riley-dashboard/.replit-artifact/: artifact.toml
artifacts/riley-dashboard/src/: App.tsx  index.css
artifacts/riley-dashboard/src/components/: AnimatedBackground.tsx  ErrorBoundary.tsx  MagicBento.css  MagicBento.tsx  RileyChat.tsx
artifacts/riley-dashboard/src/pages/: alerts.tsx  bugscan.tsx  dashboard.tsx  investigate.tsx  landing.tsx  osint.tsx  patterns.tsx  recon.tsx  simulate.tsx  (+2 more)
docs/: neon-migration.sql
docs/superpowers/specs/: 2026-07-06-riley-ai-agent-design.md  2026-07-06-tier1-agent-design.md
lib/api-spec/: openapi.yaml
lib/api-zod/src/: manual.ts
lib/db/: drizzle.config.ts
osint-agent/: .env.example  README.md  pyproject.toml
osint-agent/src/riley_osint/: __init__.py  __main__.py  cli.py  config.py  detect.py  models.py
osint-agent/src/riley_osint/agent/: llm.py  orchestrator.py
osint-agent/src/riley_osint/tools/: __init__.py  base.py  breach_recon.py  dns_recon.py  email_recon.py  social_recon.py  tech_recon.py  threat_intel.py
(+13 files in other folders)
