[project]
name = "riley-osint"
version = "0.1.0"
description = "RILEY OSINT recon agent — parallel online intelligence gathering with AI synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.0",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
  "dnspython>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[project.scripts]
riley-recon = "riley_osint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riley_osint"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
